fix awesometextview not respecting android:gravity if present

--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -63,6 +63,7 @@
         <attr name="typicon"/>
         <attr name="materialIcon" />
         <attr name="android:clickable" />
+        <attr name="android:gravity" />
     </declare-styleable>
 
     <declare-styleable name="BootstrapLabel">
